--- a/src/main/resources/static/debug.html
+++ b/src/main/resources/static/debug.html
@@ -8,7 +8,7 @@
 <a href="/">欢迎页</a><br>
 <a href="login.html">登陆</a><br>
 <a href="main.html">主页</a><br>
-<a href="/init">初始化数据库</a><br>
+<a href="/debug">初始化数据库</a><br>
 <a href="/login">登陆</a><br>
 <a href="/logout">登出</a><br>
 <a href="redirect.html">跳转页面</a><br>
