--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+  <script src="js/js.js"></script>
   <style>
     body {
       padding-top: 50px;
@@ -21,20 +26,20 @@
   <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
+        <!--<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>
+        </button>-->
         <a href="#" class="navbar-brand">管理</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a @click="display='bed'"><span class="glyphicon glyphicon-bed"></span>病床管理</a></li>
-          <li><a @click="display='patient'"><span class="glyphicon glyphicon-bed"></span>患者管理</a></li>
-          <li><a @click="display='section'"><span class="glyphicon glyphicon-tree-conifer"></span>部门管理</a></li>
-          <li><a @click="display='doctor'"><span class="glyphicon glyphicon-user"></span>医生管理</a></li>
-          <li><a @click="display='recode'"><span class="glyphicon glyphicon-book"></span>就诊记录</a></li>
+          <li><a @click="setFunction(0)"><span class="glyphicon glyphicon-bed"></span>病床管理</a></li>
+          <li><a @click="setFunction(1)"><span class="glyphicon glyphicon-book"></span>就诊记录</a></li>
+          <li><a @click="setFunction(2)"><span class="glyphicon glyphicon-user"></span>患者管理</a></li>
+          <li><a @click="setFunction(3)"><span class="glyphicon glyphicon-user"></span>医生管理</a></li>
+          <li><a @click="setFunction(4)"><span class="glyphicon glyphicon-wrench"></span>部门管理</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
@@ -51,97 +56,34 @@
       </div>
     </div>
   </div>
-  <div class="container body-content" v-if="display==='bed'">
-    <h1>病床管理</h1>
+  <div class="container body-content">
+    <h1>{{titles[fun]}}</h1>
     <div class="row">
       <table class="table table-bordered">
         <tr>
           <th v-for="(value,key) in list[0]">{{key}}</th>
+          <th>
+            <button @click="alert('hello')">添加</button>
+          </th>
         </tr>
         <tr v-for="i in list">
           <td v-for="j in i">{{j}}</td>
+          <td>
+            <button @click="alert('hello')">查看</button>
+          </td>
         </tr>
       </table>
     </div>
-    <hr>
-    <footer class="navbar navbar-fixed-bottom text-center bg-primary">
-      <p>© DaiLei </p>
-    </footer>
+
   </div>
-  <div class="container body-content" v-if="display==='patient'">
-    <h1>患者管理</h1>
-    <div class="row">
-      <table class="table table-bordered">
-        <tr>
-          <th v-for="(value,key) in list[0]">{{key}}</th>
-        </tr>
-        <tr v-for="i in list">
-          <td v-for="j in i">{{j}}</td>
-        </tr>
-      </table>
-    </div>
-    <hr>
-    <footer class="navbar navbar-fixed-bottom text-center bg-primary">
-      <p>© DaiLei </p>
-    </footer>
-  </div>
-  <div class="container body-content" v-if="display==='section'">
-    <h1>部门管理</h1>
-    <div class="row">
-      <table class="table table-bordered">
-        <tr>
-          <th v-for="(value,key) in list[0]">{{key}}</th>
-        </tr>
-        <tr v-for="i in list">
-          <td v-for="j in i">{{j}}</td>
-        </tr>
-      </table>
-    </div>
-    <hr>
-    <footer class="navbar navbar-fixed-bottom text-center bg-primary">
-      <p>© DaiLei </p>
-    </footer>
-  </div>
-  <div class="container body-content" v-if="display==='doctor'">
-    <h1>医生管理</h1>
-    <div class="row">
-      <table class="table table-bordered">
-        <tr>
-          <th v-for="(value,key) in list[0]">{{key}}</th>
-        </tr>
-        <tr v-for="i in list">
-          <td v-for="j in i">{{j}}</td>
-        </tr>
-      </table>
-    </div>
-    <hr>
-    <footer class="navbar navbar-fixed-bottom text-center bg-primary">
-      <p>© DaiLei </p>
-    </footer>
-  </div>
-  <div class="container body-content" v-if="display==='recode'">
-    <h1>就诊记录</h1>
-    <div class="row">
-      <table class="table table-bordered">
-        <tr>
-          <th v-for="(value,key) in list[0]">{{key}}</th>
-        </tr>
-        <tr v-for="i in list">
-          <td v-for="j in i">{{j}}</td>
-        </tr>
-      </table>
-    </div>
-    <hr>
-    <footer class="navbar navbar-fixed-bottom text-center bg-primary">
-      <p>© DaiLei </p>
-    </footer>
-  </div>
+
 </div>
-<script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
-<script src="js/js.js"></script>
+<hr>
+<footer class="navbar navbar-fixed-bottom text-center bg-primary" @click="showList=!showList">
+  <p>© DaiLei </p>
+</footer>
+
+
 <script>
   const app = new Vue({
     el: "#app",
@@ -154,18 +96,20 @@
             window.location.href = "/";
           }
         })
+      },
+      setFunction(num) {
+        this.fun = num;
       }
     },
     watch: {
-      display() {
-        jQuery.get("/" + this.display + "/list").then(res => {
+      fun() {
+        jQuery.get(this.functions[this.fun] + "/list").then(res => {
           this.list = JSON.parse(res);
         })
       }
     },
     created() {
-      self = this;
-      jQuery.get("/" + this.display + "/list").then(res => {
+      jQuery.get(this.functions[this.fun] + "/list").then(res => {
         this.list = JSON.parse(res);
       })
     },
@@ -175,7 +119,10 @@
         password: getCookie("password")
       },
       list: [],
-      display: 'bed'
+      showList: true,
+      fun: 0,
+      titles: ["病床管理", "就诊记录", "患者管理", "医生管理", "部门管理"],
+      functions: ["/bed/", "/recode/", "/patient/", "/doctor/", "/section/"]
     }
   });
 </script>
