--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -53,9 +53,8 @@
           "/login" + urlEncoding2(app.$data.doctor)
         ).then(
           response => {
-            if (response === true) {
-              window.location.href = "/";
-            }
+            alert(response);
+            window.location.href = "/";
           }
         );
 
