--- a/src/main/resources/static/debug.html
+++ b/src/main/resources/static/debug.html
@@ -7,7 +7,7 @@
 <body>
 <a href="/">欢迎页</a><br>
 <a href="login.html">登陆</a><br>
-<a href="main.html">主页</a><br>
+<a href="main2.html">主页</a><br>
 <a href="/debug">初始化数据库</a><br>
 <a href="/login">登陆</a><br>
 <a href="/logout">登出</a><br>
