--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,130 +1,419 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8">
-  <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>管理</title>
+  <!-- Bootstrap core CSS -->
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap theme -->
+  <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="/css/theme.css" rel="stylesheet">
+  <script src="https://cdn.staticfile.org/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
   <script src="js/js.js"></script>
-  <style>
-    body {
-      padding-top: 50px;
-      padding-bottom: 20px;
-    }
-
-    .body-content {
-      margin-top: 20px;
-      padding-left: 15px;
-      padding-right: 15px;
-    }
-  </style>
-  <title>病床管理</title>
 </head>
 <body>
 <div id="app">
-  <div class="navbar navbar-default navbar-fixed-top">
+  <!-- 顶部导航栏 -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <!--<button type="button" data-toggle="collapse" data-target=".navbar-collapse" class="navbar-toggle">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-        </button>-->
-        <a href="#" class="navbar-brand">管理</a>
+        </button>
+        <a class="navbar-brand" href="">管理</a>
       </div>
-      <div class="navbar-collapse collapse">
+      <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a @click="setFunction(0)"><span class="glyphicon glyphicon-bed"></span>病床管理</a></li>
-          <li><a @click="setFunction(1)"><span class="glyphicon glyphicon-book"></span>就诊记录</a></li>
-          <li><a @click="setFunction(2)"><span class="glyphicon glyphicon-user"></span>患者管理</a></li>
-          <li><a @click="setFunction(3)"><span class="glyphicon glyphicon-user"></span>医生管理</a></li>
-          <li><a @click="setFunction(4)"><span class="glyphicon glyphicon-wrench"></span>部门管理</a></li>
+          <li v-bind:class="table===0?'active':''"><a @click="setTable(0)">
+            <span class="glyphicon glyphicon-bed"></span>病床管理</a></li>
+          <li v-bind:class="table===1?'active':''"><a @click="setTable(1)">
+            <span class="glyphicon glyphicon-book"></span>就诊记录</a></li>
+          <li v-bind:class="table===2?'active':''"><a @click="setTable(2)">
+            <span class="glyphicon glyphicon-user"></span>患者管理</a></li>
+          <li v-bind:class="table===3?'active':''"><a @click="setTable(3)">
+            <span class="glyphicon glyphicon-user"></span>医生管理</a></li>
+          <li v-bind:class="table===4?'active':''"><a @click="setTable(4)">
+            <span class="glyphicon glyphicon-wrench"></span>科室管理</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="#">
-              <span class="glyphicon glyphicon-envelop"></span>{{login.username}}
+            <a>
+              <span class="glyphicon glyphicon-envelop"></span>{{username}}
             </a>
           </li>
           <li>
-            <a @click="logout">
-              <span class="glyphicon glyphicon-log-out"></span> 退出
-            </a>
+            <a @click="logout"><span class="glyphicon glyphicon-log-out"></span> 退出</a>
           </li>
         </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+  <!-- 主显示区域 -->
+  <div class="container theme-showcase" role="main">
+    <!-- 显示表 -->
+    <div v-if="func===0">
+      <div class="col-md-12">
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th v-for="title in tTitle[table]">{{title}}</th>
+            <th>
+              <button class="btn btn-sm btn-info" @click="create()">添加</button>
+              <button class="btn btn-sm btn-success" @click="loadList()">刷新</button>
+            </th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr v-for="i in list">
+            <td v-for="j in i">{{j}}</td>
+            <td>
+              <button class="btn btn-sm btn-info" @click="edit(i.id)">编辑</button>
+              <button class="btn btn-sm btn-danger" @click="remove(i.id)">删除</button>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- 病床实体编辑 -->
+    <div v-if="func===1&&table===0">
+      <div class="form-horizontal" role="form">
+        <div class="form-group">
+          <div class="col-sm-2 control-label">id</div>
+          <div class="col-sm-10">
+            <input disabled="disabled" class="form-control" v-model="editor.id" placeholder="自动生成">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">科室</div>
+          <div class="col-sm-10">
+            <select class="form-control" v-model="editor.sectionId">
+              <option v-for="section in sections" :value="section.code">{{section.name}}</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">床号</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" v-model="editor.no" placeholder="请输入床号">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">状态</div>
+          <div class="col-sm-10">
+            <select v-if="editor.state!==1" class="form-control" v-model="editor.state">
+              <option value="0">可用</option>
+              <option value="2">禁止使用</option>
+            </select>
+            <select v-if="editor.state===1" class="form-control" disabled="disabled">
+              <option selected="selected">占用</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">备注</div>
+          <div class="col-sm-10">
+            <input v-model="editor.note" class="form-control" placeholder="备注">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default" @click="submit()">保存</button>
+            <button class="btn btn-warning" style="margin-left: 20px" @click="func=0">取消</button>
+          </div>
+          <div class="col-sm-offset-2 col-sm-10">
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <div v-if="func===1&&table===1">
+      <div class="form-horizontal" role="form">
+        <div class="form-group">
+          <div class="col-sm-2 control-label">id</div>
+          <div class="col-sm-10">
+            <input disabled="disabled" class="form-control" placeholder="自动生成">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">科室</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请选择科室">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">床号</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请输入床号">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">状态</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请设置状态">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">备注</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="备注">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default">保存</button>
+            <button class="btn btn-warning" style="margin-left: 20px" @click="func=0">取消</button>
+          </div>
+          <div class="col-sm-offset-2 col-sm-10">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div v-if="func===1&&table===2">
+      <div class="form-horizontal" role="form">
+        <div class="form-group">
+          <div class="col-sm-2 control-label">id</div>
+          <div class="col-sm-10">
+            <input disabled="disabled" class="form-control" placeholder="自动生成">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">科室</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请选择科室">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">床号</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请输入床号">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">状态</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请设置状态">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">备注</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="备注">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default">保存</button>
+            <button class="btn btn-warning" style="margin-left: 20px" @click="func=0">取消</button>
+          </div>
+          <div class="col-sm-offset-2 col-sm-10">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div v-if="func===1&&table===3">
+      <div class="form-horizontal" role="form">
+        <div class="form-group">
+          <div class="col-sm-2 control-label">id</div>
+          <div class="col-sm-10">
+            <input disabled="disabled" class="form-control" placeholder="自动生成">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">科室</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请选择科室">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">床号</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请输入床号">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">状态</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请设置状态">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">备注</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="备注">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default">保存</button>
+            <button class="btn btn-warning" style="margin-left: 20px" @click="func=0">取消</button>
+          </div>
+          <div class="col-sm-offset-2 col-sm-10">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div v-if="func===1&&table===4">
+      <div class="form-horizontal" role="form">
+        <div class="form-group">
+          <div class="col-sm-2 control-label">id</div>
+          <div class="col-sm-10">
+            <input disabled="disabled" class="form-control" placeholder="自动生成">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">科室</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请选择科室">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">床号</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请输入床号">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">状态</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="请设置状态">
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="col-sm-2 control-label">备注</div>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" placeholder="备注">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-offset-2 col-sm-10">
+            <button class="btn btn-default">保存</button>
+            <button class="btn btn-warning" style="margin-left: 20px" @click="func=0">取消</button>
+          </div>
+          <div class="col-sm-offset-2 col-sm-10">
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="container body-content">
-    <h1>{{titles[fun]}}</h1>
-    <div class="row">
-      <table class="table table-bordered">
-        <tr>
-          <th v-for="(value,key) in list[0]">{{key}}</th>
-          <th>
-            <button @click="alert('hello')">添加</button>
-          </th>
-        </tr>
-        <tr v-for="i in list">
-          <td v-for="j in i">{{j}}</td>
-          <td>
-            <button @click="alert('hello')">查看</button>
-          </td>
-        </tr>
-      </table>
-    </div>
-
-  </div>
-
 </div>
-<hr>
-<footer class="navbar navbar-fixed-bottom text-center bg-primary" @click="showList=!showList">
-  <p>© DaiLei </p>
-</footer>
-
 
 <script>
   const app = new Vue({
-    el: "#app",
-    methods: {
-      getCookie,
-      logout() {
-        jQuery.get("/logout").then(res => {
-          if (res) {
-            alert("注销成功,正在跳转");
+      el: "#app",
+      methods: {
+        // 从Cookie中获取键值
+        getCookie,
+        urlEncoding2,
+        // 访问注销页面,提示信息,跳转到主页
+        logout() {
+          jQuery.get("/logout").then(res => {
+            alert(res);
             window.location.href = "/";
+          })
+        },
+        // 设置显示的页面
+        setTable(num) {
+          if (this.func === 0)
+            this.table = num;
+        },
+        // 功能切换:列表查看,实体编辑
+        create() {
+          this.func = 1;
+          this.editor = {};
+          this.editor.state = 0;
+        },
+        edit(id) {
+          this.func = 1;
+          jQuery.get(this.fUrl[this.table] + 'edit/' + id).then(res => this.editor = JSON.parse(res))
+        },
+        submit() {
+          switch (this.table) {
+            case 0:
+              console.log((typeof this.editor.sectionId));
+              if (this.editor.sectionId === undefined) {
+                alert("科室为必填项");
+                return;
+              }
+              if (this.editor.no === undefined) {
+                alert("床号为必填项");
+                return;
+              }
+              break;
           }
-        })
+          jQuery.get(this.fUrl[this.table] + 'edit/save' + this.urlEncoding2(this.editor)).then(res => {
+            alert(res);
+            this.func = 0;
+          });
+        },
+        loadList() {
+          jQuery.get(this.fUrl[this.table] + "list").then(res => this.list = JSON.parse(res))
+        }
+        ,
+        remove(id) {
+          jQuery.get(this.fUrl[this.table] + "remove/" + id).then(res => {
+            alert(res);
+            this.loadList();
+          });
+        }
       },
-      setFunction(num) {
-        this.fun = num;
+      watch: {
+        table() {
+          this.loadList();
+        },
+        func(newVal) {
+          if (newVal === 0)
+            this.loadList();
+        }
       }
-    },
-    watch: {
-      fun() {
-        jQuery.get(this.functions[this.fun] + "/list").then(res => {
-          this.list = JSON.parse(res);
-        })
+      ,
+      // 页面加载完毕,获取第一页数据
+      created() {
+        // 加载首页数据
+        jQuery.get(this.fUrl[this.table] + "list").then(res => this.list = JSON.parse(res));
+        // 加载科室列表
+        jQuery.get("/section/sectionSelect").then(res => this.sections = JSON.parse(res));
       }
-    },
-    created() {
-      jQuery.get(this.functions[this.fun] + "/list").then(res => {
-        this.list = JSON.parse(res);
-      })
-    },
-    data: {
-      login: {
+      ,
+      data: {
         username: getCookie("username"),
-        password: getCookie("password")
-      },
-      list: [],
-      showList: true,
-      fun: 0,
-      titles: ["病床管理", "就诊记录", "患者管理", "医生管理", "部门管理"],
-      functions: ["/bed/", "/recode/", "/patient/", "/doctor/", "/section/"]
-    }
-  });
+        func: 0,
+        table: 0,
+        tTitle:
+          [
+            ["id", "床号", "所属科室", "当前病人", "状态"],
+            ["id", "姓名", "就诊科室", "床号", "当前状态", "入院时间", "出院时间"],
+            ["id", "姓名", "性别", "身份证号", "状态", "床号"],
+            ["id", "用户名", "姓名", "性别", "年龄", "身份证号", "所在科室"],
+            ["id", "科室名称", "地址", "病床总数", "可用病床"]
+          ],
+        fTitle: ["病床管理", "就诊记录", "患者管理", "医生管理", "科室管理"],
+        fUrl: ["/bed/", "/recode/", "/patient/", "/doctor/", "/section/"],
+        editor: {},
+        list: [],
+        sections: []
+      }
+    })
+  ;
 </script>
+
+
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
