--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>管理</title>
-  <!-- Bootstrap core CSS -->
-  <link href="/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap theme -->
-  <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
-  <!-- Custom styles for this template -->
-  <link href="/css/theme.css" rel="stylesheet">
-  <script src="https://cdn.staticfile.org/jquery/1.12.4/jquery.min.js"></script>
+  <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdn.staticfile.org/vue/2.2.2/vue.min.js"></script>
+  <link href="/css/theme.css" rel="stylesheet">
   <script src="js/js.js"></script>
 </head>
 <body>
@@ -96,7 +93,7 @@
           <div class="col-sm-2 control-label">科室</div>
           <div class="col-sm-10">
             <select class="form-control" v-model="editor.sectionId">
-              <option v-for="section in sections" :value="section.code">{{section.name}}</option>
+              <option v-for="section in sections" value="section.code">{{section.name}}</option>
             </select>
           </div>
         </div>
