--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -50,7 +50,7 @@
                         <a @click="logout"><span class="glyphicon glyphicon-log-out"></span> 退出</a>
                     </li>
                 </ul>
-            </div><!--/.nav-collapse -->
+            </div>
         </div>
     </nav>
     <!-- 主显示区域 -->
@@ -72,6 +72,7 @@
                 <td>
                     <button class="btn btn-sm btn-info" @click="edit(i.id)">编辑</button>
                     <button class="btn btn-sm btn-danger" @click="remove(i.id)">删除</button>
+                    <button v-if="i.state==='预约'&&page.tab===1" class="btn btn-sm btn-info" @click="acc(i.id)">接受</button>
                 </td>
             </tr>
             </tbody>
@@ -178,12 +179,14 @@
                         <option value="有效">有效</option>
                         <option value="无效">无效</option>
                         <option value="结束">结束</option>
+                        <option value="预约">预约</option>
                     </select>
                     <select class="form-control" v-model="data.entity.state" disabled="disabled"
                             v-if="data.entity.state!=='有效'">
                         <option value="有效">有效</option>
                         <option value="无效">无效</option>
                         <option value="结束">结束</option>
+                        <option value="预约">预约</option>
                     </select>
                 </div>
             </div>
@@ -254,7 +257,6 @@
                 </div>
             </div>
         </div>
-
         <!-- 医生管理 -->
         <div v-if="page.func===1&&page.tab===3" class="form-horizontal" role="form">
             <!-- id -->
@@ -344,7 +346,7 @@
                 <div class="form-group">
                     <div class="col-sm-2 control-label">id</div>
                     <div class="col-sm-10">
-                        <input disabled="disabled" class="form-control" placeholder="自动生成">
+                        <input disabled="disabled" v-model="data.entity.id" class="form-control" placeholder="自动生成">
                     </div>
                 </div>
                 <!-- 科室名 -->
@@ -387,6 +389,7 @@
       el: "#app",
       methods: {
         urlEncoding2,
+        acc(id)       {jQuery.get("/recode/acc/"+id).then(res=>{alert(res);this.loadList();})},
         logout()      {jQuery.get("/logout").then(res => {alert(res);window.location.href = "/";});},                   // 注销
         setTable(num) {if (this.page.func === 0){this.page.tab = num;this.loadList();}},                                // 切换标签
         create()      {this.loadLookup();this.page.func = 1;this.data.entity = {};},                                    // 添加记录
@@ -416,16 +419,6 @@
       },
       data: {data,url,page}
     });
-
-
-
-
-
-
-
-
-
-
 
 </script>
 <script src="/js/bootstrap.min.js"></script>
